// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputContainer /> renders input with owner name 1`] = `
<InputContainer
  history={
    Object {
      "push": [MockFunction],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/r/owner1",
      "search": "",
      "state": undefined,
    }
  }
>
  <styled.input
    onChange={[Function]}
    onKeyUp={[Function]}
    value="owner1"
  >
    <input
      aria-label="Repository input"
      autoFocus={true}
      className="sc-bdVaJa cdFJtR"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="text"
      value="owner1"
    />
  </styled.input>
</InputContainer>
`;

exports[`<InputContainer /> renders new owner name when location changes 1`] = `
<InputContainer
  history={
    Object {
      "push": [MockFunction],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/r/owner2",
      "search": "",
      "state": undefined,
    }
  }
>
  <styled.input
    onChange={[Function]}
    onKeyUp={[Function]}
    value="owner2"
  >
    <input
      aria-label="Repository input"
      autoFocus={true}
      className="sc-bdVaJa cdFJtR"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="text"
      value="owner2"
    />
  </styled.input>
</InputContainer>
`;
